# DocuFlow

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  run_ocr.py
notebook/: docling.ipynb  poc_model.ipynb  post_processing.ipynb  test.ipynb  test_pythainlp.ipynb
script/: agentic_doc.py
src/ocr/: __init__.py  mistral_ocr.py  models.py  processor.py
src/ui/: __init__.py  components.py  gradio_app.py
src/utils/: config.py
synthetic_generator/: data.py  fonts.py  generator.py  main.py
